; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_midibuf.c_midibuf_bytes_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_midibuf.c_midibuf_bytes_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MidiBuffer = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @midibuf_bytes_free(%struct.MidiBuffer* %0) #0 {
  %2 = alloca %struct.MidiBuffer*, align 8
  store %struct.MidiBuffer* %0, %struct.MidiBuffer** %2, align 8
  %3 = load %struct.MidiBuffer*, %struct.MidiBuffer** %2, align 8
  %4 = call i64 @midibuf_is_full(%struct.MidiBuffer* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %25

7:                                                ; preds = %1
  %8 = load %struct.MidiBuffer*, %struct.MidiBuffer** %2, align 8
  %9 = getelementptr inbounds %struct.MidiBuffer, %struct.MidiBuffer* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.MidiBuffer*, %struct.MidiBuffer** %2, align 8
  %12 = getelementptr inbounds %struct.MidiBuffer, %struct.MidiBuffer* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = sub nsw i32 %10, %13
  %15 = load %struct.MidiBuffer*, %struct.MidiBuffer** %2, align 8
  %16 = getelementptr inbounds %struct.MidiBuffer, %struct.MidiBuffer* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = add nsw i32 %14, %17
  %19 = sub nsw i32 %18, 1
  %20 = load %struct.MidiBuffer*, %struct.MidiBuffer** %2, align 8
  %21 = getelementptr inbounds %struct.MidiBuffer, %struct.MidiBuffer* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = srem i32 %19, %22
  %24 = add nsw i32 %23, 1
  br label %25

25:                                               ; preds = %7, %6
  %26 = phi i32 [ 0, %6 ], [ %24, %7 ]
  ret i32 %26
}

declare dso_local i64 @midibuf_is_full(%struct.MidiBuffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
